<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.3.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.finalframework.frameworks</groupId>
    <artifactId>final-frameworks</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>final-frameworks</name>
    <description>Demo project for Spring Boot</description>

    <modules>
        <module>final-framework</module>
        <module>final-auto</module>
        <module>final-boot</module>
        <module>final-example</module>
    </modules>


    <properties>
        <java.version>1.8</java.version>
        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
        <final.version>1.0.0-SNAPSHOT</final.version>
        <mybatis.version>3.5.4</mybatis.version>
        <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>
        <dubbo.boot.version>2.7.8</dubbo.boot.version>
        <sharding.version>4.1.1</sharding.version>
        <retrofit.version>2.8.1</retrofit.version>
        <okhttp.version>3.14.7</okhttp.version>
        <velocity.core.version>2.1</velocity.core.version>
        <velocity.tool.version>3.0</velocity.tool.version>
        <squareup.javapoet.version>1.13.0</squareup.javapoet.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-indexer</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.squareup</groupId>
                <artifactId>javapoet</artifactId>
                <version>${squareup.javapoet.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <!--    <dependencyManagement>-->
    <!--        <dependencies>-->
    <!--            <dependency>-->
    <!--                <groupId>org.finalframework</groupId>-->
    <!--                <artifactId>final-framework</artifactId>-->
    <!--                <version>${project.version}</version>-->
    <!--                <type>pom</type>-->
    <!--                <scope>import</scope>-->
    <!--            </dependency>-->
    <!--            <dependency>-->
    <!--                <groupId>org.finalframework.auto</groupId>-->
    <!--                <artifactId>final-auto</artifactId>-->
    <!--                <version>${project.version}</version>-->
    <!--                <type>pom</type>-->
    <!--                <scope>import</scope>-->
    <!--            </dependency>-->
    <!--        </dependencies>-->
    <!--    </dependencyManagement>-->

</project>
